Added User and Vault deletion
